--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         </div>
     </div>
 
-    <script src="js//helper.js"></script>
-    <script src="api/index.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/lazyload.js"></script>
+    <script src="js//helper.js" defer></script>
+    <script src="api/index.js" defer></script>
+    <script src="js/script.js" defer></script>
+    <script src="js/lazyload.js" defer></script>
 </body>
 
 </html>
